# bunproj

./: .replit  Cargo.toml  Cargo_minimal.toml  Cargo_old_solana.toml  app.js  bundler.js  frontend.html  index.html  minimal_backend.rs  mock_server.py  package-lock.json  package.json  replit.md  server.js  stealth_wlsfx_deployment.js  style.css  tsconfig.json  wallet-manager.js
.local/share/.cargo/: .global-cache
.local/share/.cargo/registry/cache/index.crates.io-1949cf8c6b5b557f/: anchor-attribute-access-control-0.29.0.crate  anchor-attribute-account-0.29.0.crate  anchor-attribute-constant-0.29.0.crate  anchor-attribute-error-0.29.0.crate  anchor-attribute-event-0.29.0.crate  anchor-attribute-program-0.29.0.crate  anchor-client-0.29.0.crate  anchor-derive-accounts-0.29.0.crate  anchor-derive-serde-0.29.0.crate  anchor-derive-space-0.29.0.crate  anchor-lang-0.29.0.crate  anchor-syn-0.29.0.crate  aquamarine-0.1.12.crate  ark-bn254-0.4.0.crate  ascii-0.9.3.crate  async-mutex-1.4.1.crate  attribute-derive-0.9.2.crate  attribute-derive-macro-0.9.2.crate  axum-server-0.7.2.crate  base64-simd-0.7.0.crate  binary-install-0.4.1.crate  borsh-0.9.3.crate  borsh-derive-0.9.3.crate  borsh-derive-internal-0.9.3.crate  borsh-schema-derive-internal-0.9.3.crate  caps-0.5.5.crate  cargo-cache-0.8.3.crate  cc-1.0.106.crate  cc-1.1.0.crate  collection_literals-1.0.2.crate  config-0.14.1.crate  const-str-0.3.2.crate  const-str-proc-macro-0.3.2.crate  crates_io_api-0.11.0.crate  crc-3.3.0.crate  cssparser-0.33.0.crate  cssparser-color-0.1.0.crate  curve25519-dalek-3.2.1.crate  cvt-0.1.2.crate  data-url-0.1.1.crate  (+144 more)
.local/share/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/anchor-attribute-access-control-0.29.0/: .cargo_vcs_info.json
.local/share/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/anchor-client-0.29.0/: Cargo.toml  (+1 more)
.local/state/replit/agent/: .latest.json
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted--Objective-Replicate-the-functionality-of-a-multi-wallet-token-launcher-seller-originally-built-f-1758737974517_1758737974517.txt  Pasted--Overview-Create-a-multi-wallet-bundler-tool-for-BNB-Chain-that-supports-Distributing-BNB-acros-1758737386929_1758737386930.txt  Pasted--Task-Recreate-the-Solana-bundler-tool-from-Proxima-as-described-in-their-documentation-at-Prox-1758726336335_1758726336336.txt  four_logo_base64.txt  four_logo_data_url.txt
backend/: Cargo.toml
backend/src/: bundle.rs  main.rs  wallet.rs
frontend/: Cargo.toml
frontend/src/: api.rs  lib.rs
frontend/src/components/: mod.rs  wallet_generator.rs  wallet_table.rs
frontend/styles/: main.css
middleware/: errorHandler.js  validation.js
public/: index.html  style.css
routes/: bundles.js  transactions.js
services/: bundleService.js  solanaService.js  storageService.js
shared/: Cargo.toml
shared/src/: lib.rs
simple_backend/: Cargo.toml
simple_backend/src/: main.rs
src/: App.css  App.js  App.tsx  analytics.rs  bundle.rs  bundler.rs  index.css  jupiter.rs  main.rs  mev_protection.rs  solana_client.rs  stealth.rs  telegram.rs  theme.ts  wallet.rs
src/api/: client.ts
src/components/: AccessKeyLogin.css  AccessKeyLogin.tsx  AccessKeyManager.css  AccessKeyManager.tsx  AdminCleanup.tsx  AdminPanel.css  AdminPanel.tsx  BSCScanButton.tsx  BulkFaucet.tsx  BundlingOptions.js  ConfirmationModal.css  ConfirmationModal.tsx  DraftsList.css  DraftsList.tsx  FaucetButton.tsx  FaucetStatus.tsx  LaunchPlanGeneration.css  LaunchPlanGeneration.tsx  LaunchpadForm.css  LaunchpadForm.tsx  LoadingScreen.css  LoadingScreen.tsx  LoginForm.css  LoginForm.tsx  NetworkSwitcher.css  NetworkSwitcher.tsx  QuickUnlock.tsx  ResultDisplay.js  StealthFunding.css  StealthFunding.tsx  TransactionInput.js  WalletManager.js  WalletTable.css
src/components/Analytics/: AnalyticsDashboard.css  AnalyticsDashboard.tsx  BundleHistoryTable.tsx  GasUsageChart.tsx  NetworkStatusChart.tsx  SuccessRateChart.tsx  TransactionHistoryTable.tsx  WalletPerformanceChart.tsx  WalletStatsTable.tsx
src/components/BundleConfig/: BundleConfig.css  BundleConfig.tsx  BundlePreview.tsx  ExecutionParams.tsx  PresetManager.tsx  TokenConfig.tsx  TransactionSettings.tsx
src/components/BundleExecution/: BundleExecution.css  BundleExecution.tsx  ExecutionControls.tsx  ExecutionSummary.tsx  StatusDashboard.tsx  TransactionQueue.tsx  TransactionRow.tsx
src/components/Dialogs/: ConfirmDialog.tsx  GenerateWalletsDialog.tsx  ImportWalletsDialog.tsx
src/components/FundingPanel/: BalanceDashboard.tsx  DistributionForm.tsx  FundingPanel.css  FundingPanel.tsx  OperationPreview.tsx  ProgressTracker.tsx  TreasuryManager.tsx
src/components/WalletTable/: ActionButtons.tsx  BalanceCell.tsx  ExportDialog.tsx  PrivateKeyCell.tsx  RoleSelector.tsx  WalletRow.tsx  WalletTable.tsx
src/config/: env.ts
src/contracts/: TaxToken.abi.json  TaxToken.sol  TaxTokenFactory.sol
src/contracts/abi/: TaxToken.json  TaxTokenFactory.json
src/contracts/bytecode/: TaxToken.json  TaxTokenFactory.json
src/contracts/interfaces/: IBEP20.sol  ITaxToken.sol
src/deployment/: deploy-real.js  execute-deployment.ts  real-deployment.ts  simple-token-deploy.js  wallet-derivation.ts
src/services/: analytics.ts  api.js  bsc-rpc.ts  contract-deployment.ts  enhanced-coordination-service.ts  execution-engine.ts  faucet-client.ts  faucet-manager.ts  faucet-monitor.ts  four-meme-client.ts  gas-manager.ts  pancakeswap-monitor.ts  stealth-manager.ts  tax-execution-engine.ts  tax-monitoring.ts  tax-transaction-manager.ts  transaction-manager.ts  wallet-funding-service.ts
src/store/: analytics.ts  config.ts  execution.ts  faucet.ts  funding.ts  launch-plans.ts  launches.ts  network.ts  presets.ts  session.ts  transactions.ts  treasury.ts  users.ts  wallet-funding.ts  wallets.ts
src/types/: bundle-config.ts  funding.ts  index.ts
src/utils/: bscscan.ts  crypto.ts  encrypted-vault.ts  input-validation.ts  security-guards.ts  security-policies.ts  security-verification.ts  sessionCleanup.ts  solana.js  storage-security.ts  transport-security.ts
(+153 files in other folders)
