[package]
name = "proxima-solana-bundler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Minimal web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# HTTP client with minimal TLS
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
dotenv = "0.15"

# Crypto (minimal)
sha2 = "0.10"

# Futures
futures-util = "0.3"