[package]
name = "proxima-solana-bundler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptographic libraries for Solana-compatible functionality
ed25519-dalek = "1.0"
sha2 = "0.10"

# HTTP client for Solana RPC calls
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
bs58 = "0.4"

# Async and concurrency
parking_lot = "0.12"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"