[workspace]
members = [
    "backend",
    "frontend", 
    "shared"
]
resolver = "2"

[workspace.dependencies]
# Common dependencies shared across workspace
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Web framework
axum = "0.7"

# Ethereum/EVM libraries for BNB Chain
ethers = { version = "2.0", features = ["ws", "rustls", "legacy"] }

# Frontend
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = "0.3"

# Fix build issues
cc = "=1.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release] 
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"