[package]
name = "bnb-bundler-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Ethereum/BNB Chain support - temporarily simplified
# ethers = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Shared types
bnb-bundler-shared = { path = "../shared" }

# Random number generation
rand = "0.8"

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Environment variables
dotenvy = "0.15"