[package]
name = "bnb-bundler-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ethereum/BNB Chain support - temporarily simplified
# ethers = { workspace = true }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Shared types
bnb-bundler-shared = { path = "../shared" }

# Random number generation
rand = "0.8"

# HTTP client for external APIs - temporarily removed to avoid cc crate issues
# reqwest = { version = "0.11", features = ["json"], default-features = false }

# Environment variables - temporarily removed to avoid cc crate issues
# dotenvy = "0.15"

# Force stable cc version to avoid corruption issues
cc = "=1.0.83"