[package]
name = "bnb-bundler-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Frontend framework
leptos = { workspace = true }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }

# WASM bindings
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Web APIs
web-sys = { workspace = true, features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Event",
    "EventTarget",
    "HtmlInputElement",
    "HtmlButtonElement"
] }

# Serialization for API calls
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

# Ethereum wallet support in WASM - temporarily disabled to fix compilation
# ethers = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true, features = ["wasmbind"] }

# Shared types
bnb-bundler-shared = { path = "../shared" }

# Random number generation for WASM
getrandom = { version = "0.2", features = ["js"] }

# Async utilities for WASM
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = "0.5"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
console_error_panic_hook = "0.1"