[package]
name = "bnb-bundler-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Ethereum types
ethers = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
wasm = ["chrono/wasmbind"]