[package]
name = "bnb-bundler-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Ethereum types - temporarily disabled to fix compilation
# ethers = { workspace = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[features]
default = []
wasm = ["chrono/wasmbind"]